# i3lock-color-wrapper

./: README.md  flake.nix  pyproject.toml
i3lock_color/: colors.py  main.py
