[tool.poetry]
name = "i3lock-color-pytonic"
version = "0.1.0"
description = "Pre-configured script to run i3lock-color with the ability to change the color scheme and some parameters"
authors = ["MOIS3Y <stepan@zhukovsky.me>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/MOIS3Y/i3lock-color-pytonic"
keywords = ["i3lock", "i3lock-color", "lockscreen"]
include = ["CHANGELOG.md"]
readme = "README.md"
packages = [{include = "i3lock_color"}]


[tool.poetry.dependencies]
python = "^3.10"
base16-colorlib = "^0.2.0"
click = "^8.1.7"
PyYAML = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[tool.poetry.scripts]
i3lock-run = "i3lock_color.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
